# nl2graph

./: .gitignore  README.md  pyproject.toml
configs/: configs.yaml
scripts/: run_metaqa.py
src/nl2graph/: __init__.py  __main__.py
src/nl2graph/analysis/: __init__.py  analysis.py  entity.py  reporting.py
src/nl2graph/analytics/: __init__.py  analysis.py  entity.py  report.py
src/nl2graph/base/: __init__.py  configs.py  context.py  log.py  storage.py  timeout.py
src/nl2graph/cli/: __init__.py  _helpers.py  clear.py  evaluate.py  execute.py  generate.py  init.py  ls.py  report.py  server.py  train.py
src/nl2graph/data/: __init__.py  entity.py  repository.py
src/nl2graph/eval/: __init__.py  entity.py  execution.py  metrics.py  repository.py  scoring.py
src/nl2graph/evaluation/: __init__.py  metrics.py  scoring.py
src/nl2graph/execution/: __init__.py  execution.py  service.py
src/nl2graph/generation/: __init__.py
src/nl2graph/graph/: entity.py  service.py
src/nl2graph/llm/: __init__.py  generation.py  pipeline.py
src/nl2graph/pipeline/: __init__.py  entity.py  (+10 more)
templates/prompts/: cypher.jinja2  gremlin.jinja2  nl2cypher.jinja2  sparql.jinja2
tests/: conftest.py
tests/base/: test_configs.py  test_llm.py  test_llm_integration.py  test_templates.py
tests/fixtures/: .env.test  test_config.yaml  test_template.jinja2
tests/test_analytics/: test_analysis.py  test_report.py
tests/test_base/: test_configs.py  test_models.py  test_storage.py
tests/test_cli/: test_generate.py  test_init.py  test_ls.py
tests/test_eval/: test_entity.py  test_evaluator.py  test_metrics.py  test_repository.py
tests/test_graph/: test_result.py  test_schema.py
tests/test_llm/: test_clients.py  test_generator.py  test_runner.py  test_templates.py
tests/test_seq2seq/: test_pipeline.py
tests/test_workflow/: test_inference.py
(+57 files in other folders)
