[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2graph"
version = "0.1.0"
description = "Various implementations of natural language to graph query language translation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "loguru",
    "pydantic",
    "punq",
    "pyyaml",
    "python-dotenv",
    "jinja2",
    "neo4j",
    "rdflib",
    "gremlinpython",
    "openai",
    "torch",
    "transformers",
    "graphq-trans",
    "typer>=0.9.0",
]

[project.scripts]
nl2graph = "nl2graph.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
